small fix for project title div on mobile. Fixed overflow-x on body problem as well. Still other bugs to fix...

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,16 +10,19 @@
   box-sizing: border-box;
 }
 
+/* NOTE: If I remove overflow-x: hidden; from either the html or body tag... o.0 */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-family: "Barlow", sans-serif;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
   overflow-x: hidden;
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
